# webapp-template

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/app/: main.py
backend/app/config/: config.example.env  config.py
backend/app/db/: __init__.py
backend/app/routes/: demo.py
backend/app/schemas/: demo.py
backend/app/services/: demo.py
backend/tests/: test_main.py
database/: README.md  config.example.env  docker-compose.yml
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  run.sh  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
